@@ -144,6 +144,7 @@ DViewOperations_initRepresentationMsg = Initialize representations
 DViewOperations_notContainedErrorMsg = The view is not contained in the analysis
 DViewOperations_removeSelectedViewMsg = View unselection
 DViewOperations_updateSelectedVPDataMsg = Update selected Viewpoints data
+DRepInDViewToRootObjectsAndWithDRepDescRepPathMigrationParticipant_nameMigrationMessage= Migration done for "Representation name and documentation move to descriptor" (the result of this migration will be saved on the next session save): the name and documentation of {0} representation(s) have been moved to their DRepresentationDescriptor.
 EAttributeCustomizationAttributeNameCommonToAppliedOnConstraint_EAttributeDiffernentTypesErrorMsg = {0} and {1} have each a EAttribute named {2} but with different types
 EAttributeCustomizationAttributeNameCommonToAppliedOnConstraint_notEAttributeErrorMsg = {0} EAttribute name on {1} concerns {2} which is not a EAttribute
 EAttributeCustomizationAttributeNameCommonToAppliedOnConstraint_validationNotExistErrorMsg = {0} EAttribute name on {1} doesn''t exists
